Creazione primo box container

--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
 <body>
     <div class="green"></div>
     <div id="container">
-        <div class="primo-box"></div>
-        <div class="secondo-box"></div>
+        <div class="first-box">
+            <div class="user">
+                <div class="user-name-img">
+                    <img src="img/avatar_io.jpg" alt="user Sofia">
+                    <div>Sofia</div>
+                </div>
+                <div class="settings-first-box">
+                    <i class="fa-solid fa-circle-notch"></i>
+                    <i class="fa-solid fa-message"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+            </div>
+            <div class="notification"></div>
+            <div class="searchplace"></div>
+            <div class="users"></div>
+        </div>
+        <div class="second-box"></div>
 
     </div>
 
