Creazione barra notifiche e barra ricerca

--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
-            <div class="notification"></div>
-            <div class="searchplace"></div>
+
+            <div class="notification">
+                <i class="fa-solid fa-bell-slash"></i>
+                <div class="text-notification">
+                    <div>Ricevi notifiche di nuovi messaggi</div>
+                    <div>Attiva notifiche desktop</div>
+                </div>
+            </div>
+            <div class="search-place">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Cerca o inizia una nuova chat">
+            </div>
             <div class="users"></div>
         </div>
         <div class="second-box"></div>
