--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="green"></div>
     <div id="container">
         <div class="first-box">
-            <div class="user">
-                <div class="user-name-img">
+            <div class="my-user">
+                <div class="my-user-name-img">
                     <img src="img/avatar_io.jpg" alt="user Sofia">
                     <div>Sofia</div>
                 </div>
@@ -38,7 +38,91 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Cerca o inizia una nuova chat">
             </div>
-            <div class="users"></div>
+            <div class="users-list">
+                <div class="user">
+                    <div class="user-text-left">
+                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <div class="text-users">
+                            <div>Michele</div>
+                            <div>Ultimo messaggio inviato</div>
+                        </div>
+                    </div>
+                    <div class="time">12:00</div>
+                </div>
+                <div class="user">
+                    <div class="user-text-left">
+                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <div class="text-users">
+                            <div>Michele</div>
+                            <div>Ultimo messaggio inviato</div>
+                        </div>
+                    </div>
+                    <div class="time">12:00</div>
+                </div>
+                <div class="users-list">
+                    <div class="user">
+                        <div class="user-text-left">
+                            <img src="img/avatar_1.jpg" alt="avatar 1">
+                            <div class="text-users">
+                                <div>Michele</div>
+                                <div>Ultimo messaggio inviato</div>
+                            </div>
+                        </div>
+                        <div class="time">12:00</div>
+                    </div>
+                    <div class="user">
+                        <div class="user-text-left">
+                            <img src="img/avatar_1.jpg" alt="avatar 1">
+                            <div class="text-users">
+                                <div>Michele</div>
+                                <div>Ultimo messaggio inviato</div>
+                            </div>
+                        </div>
+                        <div class="time">12:00</div>
+                    </div>
+                    <div class="users-list">
+                        <div class="user">
+                            <div class="user-text-left">
+                                <img src="img/avatar_1.jpg" alt="avatar 1">
+                                <div class="text-users">
+                                    <div>Michele</div>
+                                    <div>Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+                            <div class="time">12:00</div>
+                        </div>
+                        <div class="user">
+                            <div class="user-text-left">
+                                <img src="img/avatar_1.jpg" alt="avatar 1">
+                                <div class="text-users">
+                                    <div>Michele</div>
+                                    <div>Ultimo messaggio inviato</div>
+                                </div>
+                            </div>
+                            <div class="time">12:00</div>
+                        </div>
+                        <div class="users-list">
+                            <div class="user">
+                                <div class="user-text-left">
+                                    <img src="img/avatar_1.jpg" alt="avatar 1">
+                                    <div class="text-users">
+                                        <div>Michele</div>
+                                        <div>Ultimo messaggio inviato</div>
+                                    </div>
+                                </div>
+                                <div class="time">12:00</div>
+                            </div>
+                            <div class="user">
+                                <div class="user-text-left">
+                                    <img src="img/avatar_1.jpg" alt="avatar 1">
+                                    <div class="text-users">
+                                        <div>Michele</div>
+                                        <div>Ultimo messaggio inviato</div>
+                                    </div>
+                                </div>
+                                <div class="time">12:00</div>
+                            </div>
+            </div>
         </div>
         <div class="second-box"></div>
 
