--- a/index.html
+++ b/index.html
@@ -59,72 +59,81 @@
                     </div>
                     <div class="time">12:00</div>
                 </div>
-                <div class="users-list">
-                    <div class="user">
-                        <div class="user-text-left">
-                            <img src="img/avatar_1.jpg" alt="avatar 1">
-                            <div class="text-users">
-                                <div>Michele</div>
-                                <div>Ultimo messaggio inviato</div>
-                            </div>
+                <div class="user">
+                    <div class="user-text-left">
+                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <div class="text-users">
+                            <div>Michele</div>
+                            <div>Ultimo messaggio inviato</div>
                         </div>
-                        <div class="time">12:00</div>
                     </div>
-                    <div class="user">
-                        <div class="user-text-left">
-                            <img src="img/avatar_1.jpg" alt="avatar 1">
-                            <div class="text-users">
-                                <div>Michele</div>
-                                <div>Ultimo messaggio inviato</div>
-                            </div>
+                    <div class="time">12:00</div>
+                </div>
+                <div class="user">
+                    <div class="user-text-left">
+                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <div class="text-users">
+                            <div>Michele</div>
+                            <div>Ultimo messaggio inviato</div>
                         </div>
-                        <div class="time">12:00</div>
                     </div>
-                    <div class="users-list">
-                        <div class="user">
-                            <div class="user-text-left">
-                                <img src="img/avatar_1.jpg" alt="avatar 1">
-                                <div class="text-users">
-                                    <div>Michele</div>
-                                    <div>Ultimo messaggio inviato</div>
-                                </div>
-                            </div>
-                            <div class="time">12:00</div>
+                    <div class="time">12:00</div>
+                </div>
+                <div class="user">
+                    <div class="user-text-left">
+                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <div class="text-users">
+                            <div>Michele</div>
+                            <div>Ultimo messaggio inviato</div>
                         </div>
-                        <div class="user">
-                            <div class="user-text-left">
-                                <img src="img/avatar_1.jpg" alt="avatar 1">
-                                <div class="text-users">
-                                    <div>Michele</div>
-                                    <div>Ultimo messaggio inviato</div>
-                                </div>
-                            </div>
-                            <div class="time">12:00</div>
+                    </div>
+                    <div class="time">12:00</div>
+                </div>
+                <div class="user">
+                    <div class="user-text-left">
+                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <div class="text-users">
+                            <div>Michele</div>
+                            <div>Ultimo messaggio inviato</div>
                         </div>
-                        <div class="users-list">
-                            <div class="user">
-                                <div class="user-text-left">
-                                    <img src="img/avatar_1.jpg" alt="avatar 1">
-                                    <div class="text-users">
-                                        <div>Michele</div>
-                                        <div>Ultimo messaggio inviato</div>
-                                    </div>
-                                </div>
-                                <div class="time">12:00</div>
-                            </div>
-                            <div class="user">
-                                <div class="user-text-left">
-                                    <img src="img/avatar_1.jpg" alt="avatar 1">
-                                    <div class="text-users">
-                                        <div>Michele</div>
-                                        <div>Ultimo messaggio inviato</div>
-                                    </div>
-                                </div>
-                                <div class="time">12:00</div>
-                            </div>
+                    </div>
+                    <div class="time">12:00</div>
+                </div>
+                <div class="user">
+                    <div class="user-text-left">
+                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <div class="text-users">
+                            <div>Michele</div>
+                            <div>Ultimo messaggio inviato</div>
+                        </div>
+                    </div>
+                    <div class="time">12:00</div>
+                </div>
+                <div class="user">
+                    <div class="user-text-left">
+                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <div class="text-users">
+                            <div>Michele</div>
+                            <div>Ultimo messaggio inviato</div>
+                        </div>
+                    </div>
+                    <div class="time">12:00</div>
+                </div>
             </div>
         </div>
-        <div class="second-box"></div>
+        <div class="second-box">
+            <div class="my-user">
+                <div class="my-user-name-img">
+                    <img src="img/avatar_io.jpg" alt="user Sofia">
+                    <div>Sofia</div>
+                </div>
+                <div class="settings-first-box">
+                    <i class="fa-solid fa-circle-notch"></i>
+                    <i class="fa-solid fa-message"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+            </div>
+        </div>
 
     </div>
 
