--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 </div>
                 <div class="user">
                     <div class="user-text-left">
-                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <img src="img/avatar_2.jpg" alt="avatar 1">
                         <div class="text-users">
-                            <div>Michele</div>
+                            <div>Fabio</div>
                             <div>Ultimo messaggio inviato</div>
                         </div>
                     </div>
@@ -61,9 +61,9 @@
                 </div>
                 <div class="user">
                     <div class="user-text-left">
-                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <img src="img/avatar_3.jpg" alt="avatar 1">
                         <div class="text-users">
-                            <div>Michele</div>
+                            <div>Samuele</div>
                             <div>Ultimo messaggio inviato</div>
                         </div>
                     </div>
@@ -71,9 +71,9 @@
                 </div>
                 <div class="user">
                     <div class="user-text-left">
-                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <img src="img/avatar_4.jpg" alt="avatar 1">
                         <div class="text-users">
-                            <div>Michele</div>
+                            <div>Alessandro B.</div>
                             <div>Ultimo messaggio inviato</div>
                         </div>
                     </div>
@@ -81,9 +81,9 @@
                 </div>
                 <div class="user">
                     <div class="user-text-left">
-                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <img src="img/avatar_5.jpg" alt="avatar 1">
                         <div class="text-users">
-                            <div>Michele</div>
+                            <div>Alessandro L.</div>
                             <div>Ultimo messaggio inviato</div>
                         </div>
                     </div>
@@ -91,9 +91,9 @@
                 </div>
                 <div class="user">
                     <div class="user-text-left">
-                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <img src="img/avatar_6.jpg" alt="avatar 1">
                         <div class="text-users">
-                            <div>Michele</div>
+                            <div>Claudia</div>
                             <div>Ultimo messaggio inviato</div>
                         </div>
                     </div>
@@ -101,9 +101,9 @@
                 </div>
                 <div class="user">
                     <div class="user-text-left">
-                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <img src="img/avatar_7.jpg" alt="avatar 1">
                         <div class="text-users">
-                            <div>Michele</div>
+                            <div>Federico</div>
                             <div>Ultimo messaggio inviato</div>
                         </div>
                     </div>
@@ -111,9 +111,9 @@
                 </div>
                 <div class="user">
                     <div class="user-text-left">
-                        <img src="img/avatar_1.jpg" alt="avatar 1">
+                        <img src="img/avatar_8.jpg" alt="avatar 1">
                         <div class="text-users">
-                            <div>Michele</div>
+                            <div>Davide</div>
                             <div>Ultimo messaggio inviato</div>
                         </div>
                     </div>
