--- a/index.html
+++ b/index.html
@@ -124,12 +124,15 @@
         <div class="second-box">
             <div class="my-user">
                 <div class="my-user-name-img">
-                    <img src="img/avatar_io.jpg" alt="user Sofia">
-                    <div>Sofia</div>
+                    <img src="img/avatar_1.jpg" alt="user Sofia">
+                    <div class="text-users">
+                        <div>Michele</div>
+                        <div>Ultimo accesso oggi alle 12:00</div>
+                    </div>
                 </div>
                 <div class="settings-first-box">
-                    <i class="fa-solid fa-circle-notch"></i>
-                    <i class="fa-solid fa-message"></i>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-paperclip"></i>
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
