Continuazione creazione secondo box

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
+            <div class="message-text">
+                <i class="fa-solid fa-face-smile"></i>
+            </div>
         </div>
 
     </div>
