--- a/index.html
+++ b/index.html
@@ -136,8 +136,14 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
+
+            <div class="texts">
+            </div>
+
             <div class="message-text">
-                <i class="fa-solid fa-face-smile"></i>
+                <i class="fa-regular fa-face-smile"></i>
+                <input type="text" id="write-message"placeholder="Scrivi un messaggio">
+                <i class="fa-solid fa-microphone"></i>
             </div>
         </div>
 
