Perfezionamento secondo box

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="green"></div>
     <div id="container">
         <div class="first-box">
-            <div class="my-user">
-                <div class="my-user-name-img">
+            <div class="user-friend">
+                <div class="user-friend-name-img">
                     <img src="img/avatar_io.jpg" alt="user Sofia">
                     <div>Sofia</div>
                 </div>
@@ -122,8 +122,8 @@
             </div>
         </div>
         <div class="second-box">
-            <div class="my-user">
-                <div class="my-user-name-img">
+            <div class="user-friend">
+                <div class="user-friend-name-img">
                     <img src="img/avatar_1.jpg" alt="user Sofia">
                     <div class="text-users">
                         <div>Michele</div>
@@ -136,15 +136,15 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
-
             <div class="texts">
             </div>
-
             <div class="message-text">
                 <i class="fa-regular fa-face-smile"></i>
                 <input type="text" id="write-message"placeholder="Scrivi un messaggio">
                 <i class="fa-solid fa-microphone"></i>
             </div>
+
+            
         </div>
 
     </div>
