--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&family=Montserrat:wght@700&family=Roboto:wght@300&family=Rubik+Mono+One&display=swap" rel="stylesheet"> 
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     
     <link rel="stylesheet" href="css/stile.css">
@@ -137,8 +141,24 @@
                 </div>
             </div>
             <div class="texts">
+                <div class="area-text left">
+                    <div class="single-text friend">
+                       <div>Tutto fatto!</div>
+                       <div>16:15</div>
+                    </div>
+                </div>
+                <div class="area-text right">
+                    <div class="single-text me">
+                        <div>Hai portato a spasso il cane?</div>
+                        <div>15:30</div>
+                    </div>
+                    <div class="single-text me">
+                        <div>Ricordati di stendere i panni</i></div>
+                        <div>15:50</div>
+                    </div>
+                </div>
             </div>
-            <div class="message-text">
+            <div class="message-text ">
                 <i class="fa-regular fa-face-smile"></i>
                 <input type="text" id="write-message"placeholder="Scrivi un messaggio">
                 <i class="fa-solid fa-microphone"></i>
