--- a/index.html
+++ b/index.html
@@ -140,23 +140,38 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
-            <div class="texts">
-                <div class="area-text left">
+            <div class="messages">
+                <div class="message-user">
+                    <div class="single-text me">
+                        <div>Hai portato a spasso il cane?</div>
+                        <div>15:30</div>
+                    </div>
+                </div>
+                <div class="message-user">
+                    <div class="single-text me">
+                        <div>Ricordati di stendere i panni</i></div>
+                        <div>15:50</div>
+                    </div>
+                </div>
+                <div class="message-friend">
+                    <div class="single-text friend">
+                        <div>Tutto fatto!</div>
+                        <div>16:15</div>
+                     </div>
+                </div>
+                <!--<div class="area-text left">
                     <div class="single-text friend">
                        <div>Tutto fatto!</div>
                        <div>16:15</div>
                     </div>
                 </div>
                 <div class="area-text right">
-                    <div class="single-text me">
-                        <div>Hai portato a spasso il cane?</div>
-                        <div>15:30</div>
-                    </div>
+                    
                     <div class="single-text me">
                         <div>Ricordati di stendere i panni</i></div>
                         <div>15:50</div>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="message-text ">
                 <i class="fa-regular fa-face-smile"></i>
