--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="search-place">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Cerca o inizia una nuova chat">
+                <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="">
             </div>
             <div class="users-list">
                 <div class="user">
@@ -159,36 +159,16 @@
                         <div>16:15</div>
                      </div>
                 </div>
-                <!--<div class="area-text left">
-                    <div class="single-text friend">
-                       <div>Tutto fatto!</div>
-                       <div>16:15</div>
-                    </div>
-                </div>
-                <div class="area-text right">
-                    
-                    <div class="single-text me">
-                        <div>Ricordati di stendere i panni</i></div>
-                        <div>15:50</div>
-                    </div>
-                </div>-->
             </div>
             <div class="message-text ">
                 <i class="fa-regular fa-face-smile"></i>
                 <input type="text" id="write-message"placeholder="Scrivi un messaggio">
                 <i class="fa-solid fa-microphone"></i>
-            </div>
-
-            
+            </div> 
         </div>
-
     </div>
 
-
-
-
-
-    <!-- JAVASCRIPT  -->
+    <!-- JAVASCRIPT -->
 	
 	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="js/script.js"></script>
