--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <div>{{ element.lastMessage }}</div>
                             </div>
                         </div>
-                        <div class="time">12:00</div>
+                        <div class="time">{{ element.hour}}</div>
                     </div>
                 </div>
             </div>
@@ -72,22 +72,22 @@
                     </div>
                 </div>
                 <div class="messages">
-                    <div class="message-user">
+                    <div class="message-user" v-for="element in messageUser">
                         <div class="single-text me">
-                            <div>Hai portato a spasso il cane?</div>
-                            <div>15:30</div>
+                            <div>{{ element.message }}</div>
+                            <div>{{ element.hour }}</div>
                         </div>
                     </div>
-                    <div class="message-user">
+                   <!-- <div class="message-user">
                         <div class="single-text me">
                             <div>Ricordati di stendere i panni</i></div>
                             <div>15:50</div>
                         </div>
-                    </div>
-                    <div class="message-friend">
+                    </div>-->
+                    <div class="message-friend" v-for="element in messageFriend">
                         <div class="single-text friend">
-                            <div>Tutto fatto!</div>
-                            <div>16:15</div>
+                            <div>{{ element.message }}</div>
+                            <div>{{ element.hour }}</div>
                          </div>
                     </div>
                 </div>
