--- a/index.html
+++ b/index.html
@@ -71,29 +71,41 @@
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
                 </div>
-                <div class="messages">
-                    <div class="message-user" v-for="element in messageUser">
-                        <div class="single-text me">
-                            <div>{{ element.message }}</div>
-                            <div>{{ element.hour }}</div>
+                <div class="messages" >
+                    <div class="message-user">
+                        <div class="single-text me" >
+                            <div>Hai portato a spasso il cane??</div>
+                            <div>15:30</div>
                         </div>
                     </div>
-                   <!-- <div class="message-user">
+                    <div class="message-user">
                         <div class="single-text me">
                             <div>Ricordati di stendere i panni</i></div>
                             <div>15:50</div>
                         </div>
-                    </div>-->
+                    </div>
+                    <div class="message-friend" >
+                        <div class="single-text friend">
+                            <div>Tutto fatto!</div>
+                            <div>16:15</div>
+                         </div>
+                    </div>
+                    <div class="message-user" v-for="element in textMessage" >
+                        <div class="single-text me" >
+                            <div>{{ element.message }}</div>
+                            <div>{{ element.hour }}</div>
+                        </div>
+                    </div>
                     <div class="message-friend" v-for="element in messageFriend">
                         <div class="single-text friend">
                             <div>{{ element.message }}</div>
-                            <div>{{ element.hour }}</div>
+                            <div>15:50</div>
                          </div>
                     </div>
                 </div>
                 <div class="message-text ">
                     <i class="fa-regular fa-face-smile"></i>
-                    <input type="text" id="write-message" v-model="newMessage" @keydown.enter="addMessage" placeholder="Scrivi un messaggio">
+                    <input type="text" id="write-message" v-model="newMessage.message" @keydown.enter="addMessage" placeholder="Scrivi un messaggio">
                     <i class="fa-solid fa-microphone"></i>
                 </div> 
             </div>
@@ -101,8 +113,9 @@
     </div>
     
 
-    <!-- JAVASCRIPT -->
-	
+    <!-- JAVASCRIPT & LUXON -->
+
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.1/build/global/luxon.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="js/script.js"></script>
 
