--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <input type="text" placeholder="Cerca o inizia una nuova chat">
                 </div>
                 <div class="users-list">
-                    <div class="user" v-for="element in contacts">
+                    <div class="user" v-for="(element, index) in contacts" :class="{active: index == chatIndex}">
                         <div class="user-text-left">
                             <img :src="element.image" :alt="element.altImage">
                             <div class="text-users">
@@ -52,7 +52,7 @@
                                 <div>{{ element.lastMessage }}</div>
                             </div>
                         </div>
-                        <div class="time">{{ element.hour}}</div>
+                        <div class="time">{{ element.data}}</div>
                     </div>
                 </div>
             </div>
@@ -71,8 +71,16 @@
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
                 </div>
+
                 <div class="messages">
-                    <div class="message-user">
+
+
+                    <div class="single-text" v-for="element in contacts[chatIndex].messages" class="contacts[chatIndex].messages.sent == true ? `single-text-user` : `single-text-friend`" >
+                        <div>{{element.text}}</div>
+                        <div>{{element.date}}</div>
+                    </div>
+
+                    <!--<div class="message-user">
                         <div class="single-text me" >
                             <div>Hai portato a spasso il cane??</div>
                             <div>15:30</div>
@@ -89,19 +97,15 @@
                             <div>Tutto fatto!</div>
                             <div>16:15</div>
                         </div>
-                    </div>
-                    <div class="message-user" v-for="element in textMessage" >
-                        <div class="single-text me" >
-                            <div>{{ element.message }}</div>
-                            <div>{{ element.hour }}</div>
-                        </div>
-                    </div>
-                    <div class="message-friend" v-for="element in messageFriend">
+                    </div>-->
+
+
+                   <!--<div class="message-friend" v-for="element in messageFriend">
                         <div class="single-text friend">
                             <div>{{ element.message }}</div>
                             <div>15:50</div>
                          </div>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="message-text ">
                     <i class="fa-regular fa-face-smile"></i>
@@ -121,3 +125,6 @@
 
 </body>
 </html>
+
+
+<!--:class="contacts[chatIndex].messages.sent == true ? `message-user` : `message-friend`"-->
